[project]
name = "spacefrontiers-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<4"
dependencies = [
    "izihawa-loglib>=1.1.21",
    "spacefrontiers-clients (>=0.0.92,<0.0.93)",
    "fastmcp (>=2.11.3,<3.0.0)",
]

[tool.uv.sources]
mcp = { git = "https://github.com/ylassoued/python-sdk", branch = "ylassoued/feat-request" }
