[project]
name = "spacefrontiers-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<4"
dependencies = [
    "izihawa-loglib>=1.1.21",
    "spacefrontiers-clients>=0.0.98",
    "fastmcp (>=2.11.3,<3.0.0)",
]

[tool.uv.sources]
mcp = { git = "https://github.com/ylassoued/python-sdk", branch = "ylassoued/feat-request" }

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0,<1.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # Ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
